scratch/evidence/melange_oxcaml_probe/_generated/immutable_data_kind.ml.ocaml.out
File "/home/ribelo/projects/ribelo/ocaml/Eta/scratch/evidence/melange_oxcaml_probe/_generated/immutable_data_kind.ml", line 1, characters 7-8:
1 | type t : immutable_data = A
           ^
Error: Syntax error
